--- a/.github/workflows/work.yaml
+++ b/.github/workflows/work.yaml
@@ -15,6 +15,7 @@ on:
 env:
   JD_COOKIE: ${{ secrets.JD_COOKIE }}
   JD_DUAL_COOKIE: ${{ secrets.JD_DUAL_COOKIE }}
+  JD_DUAL_COOKIE2: ${{ secrets.JD_DUAL_COOKIE2 }}
   PUSH_KEY: ${{ secrets.PUSH_KEY }}
   UPLOAD_BESULT_DIR: true
 
